--- a/Web.config
+++ b/Web.config
@@ -99,6 +99,8 @@
       <mimeMap fileExtension=".cshtml" mimeType="text/html"/>
       <remove fileExtension=".json"/>
       <mimeMap fileExtension=".json" mimeType="application/json"/>
+      <remove fileExtension=".wasm" />
+      <mimeMap fileExtension=".wasm" mimeType="application/wasm" />
     </staticContent>
     <!-- Configure the "Access-Control-Allow-Origin" HTTP header to a more restrictive set of domains -->
     <!-- Configure the "X-Frame-Options" HTTP header response to protect against 'ClickJacking' attacks -->
