--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -79,9 +79,6 @@
     <Reference Include="Syncfusion.Pdf.Base">
       <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.Pdf.Base.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.HtmlConverter.Base">
-      <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
-    </Reference>
     <Reference Include="Syncfusion.DocIO.Base">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.DocIO.Base.dll</HintPath>
@@ -103,10 +100,10 @@
       <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.DocToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
       <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.Presentation.Base.dll</HintPath>
@@ -121,7 +118,7 @@
       <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.ExcelToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
       <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.27.1.48\lib\net45\Syncfusion.XlsIO.Base.dll</HintPath>
@@ -131,7 +128,7 @@
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\\lib\net45\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\Syncfusion.Licensing.27.1.48\lib\net45\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
