--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -86,9 +86,9 @@
     <Reference Include="Syncfusion.Pdf.Base">
       <HintPath>packages\Syncfusion.Pdf.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.Pdf.Base.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.HtmlConverter.Base">
+    <!-- <Reference Include="Syncfusion.HtmlConverter.Base">
       <HintPath>packages\Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5.28.1.33\lib\net45\Syncfusion.HtmlConverter.Base.dll</HintPath>
-    </Reference>
+    </Reference> -->
     <Reference Include="Syncfusion.DocIO.Base">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Syncfusion.DocIO.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.DocIO.Base.dll</HintPath>
@@ -110,10 +110,10 @@
       <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.DocToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Compression.Base.28.1.33\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChart.Base.28.1.33\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
       <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.Presentation.Base.dll</HintPath>
@@ -128,7 +128,7 @@
       <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.ExcelToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\\lib\net45\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.SfChart.WPF.28.1.33\lib\net462\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
       <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.28.1.33\lib\net462\Syncfusion.XlsIO.Base.dll</HintPath>
@@ -138,7 +138,7 @@
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\\lib\net45\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\Syncfusion.Licensing.28.1.33\lib\net462\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
