--- a/packages.config
+++ b/packages.config
@@ -33,7 +33,7 @@
   <package id="Syncfusion.EJ2.WordEditor.AspNet.Mvc5" version="28.1.33" targetFramework="net462" />
   <package id="Syncfusion.ExcelChartToImageConverter.AspNet.Mvc5" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
   <package id="Syncfusion.ExcelToPdfConverter.AspNet.Mvc5" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
-  <package id="Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
+  <!-- <package id="Syncfusion.HtmlToPdfConverter.IE.AspNet.Mvc5" version="28.1.33" targetFramework="net462" requireReinstallation="true" /> -->
   <package id="Syncfusion.Licensing" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
   <package id="Syncfusion.OfficeChart.Base" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
   <package id="Syncfusion.OfficeChartToImageConverter.AspNet.Mvc5" version="28.1.33" targetFramework="net462" requireReinstallation="true" />
