--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,4 +28,4 @@ jobs:
       run: nuget restore EJ2MVCSampleBrowser.sln
       
     - name: Build MVC
-      run: msbuild EJ2MVCSampleBrowser.sln /p:Configuration=Release /p:Platform="Any CPU" /p:TargetFrameworkVersion=v4.6.2
+      run: msbuild EJ2MVCSampleBrowser.sln /p:Configuration=Release /p:Platform="Any CPU"
