--- a/EJ2MVCSampleBrowser.csproj
+++ b/EJ2MVCSampleBrowser.csproj
@@ -107,10 +107,10 @@
       <HintPath>packages\Syncfusion.DocToPdfConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.DocToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Compression.Base">
-      <HintPath>packages\\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.Compression.Base.30.1.37\lib\net462\Syncfusion.Compression.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.OfficeChart.Base">
-      <HintPath>packages\\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
+      <HintPath>packages\Syncfusion.OfficeChart.Base.30.1.37\lib\net462\Syncfusion.OfficeChart.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Presentation.Base">
       <HintPath>packages\Syncfusion.Presentation.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.Presentation.Base.dll</HintPath>
@@ -125,7 +125,7 @@
       <HintPath>packages\Syncfusion.ExcelToPdfConverter.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.ExcelToPDFConverter.Base.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfChart.WPF">
-      <HintPath>packages\\lib\net462\Syncfusion.SfChart.WPF.dll</HintPath>
+      <HintPath>packages\Syncfusion.SfChart.WPF.30.1.37\lib\net462\Syncfusion.SfChart.WPF.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.XlsIO.Base">
       <HintPath>packages\Syncfusion.XlsIO.AspNet.Mvc5.30.1.37\lib\net462\Syncfusion.XlsIO.Base.dll</HintPath>
@@ -135,7 +135,7 @@
     </Reference>
     <Reference Include="Syncfusion.Licensing">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\\lib\net45\Syncfusion.Licensing.dll</HintPath>
+      <HintPath>packages\Syncfusion.Licensing.30.1.37\lib\net462\Syncfusion.Licensing.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
